--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <br/><br/>
                 <div class="col-md-12">
                     <a href="#" target="_blank" class="btn-social btn-facebook"><i class="fa fa-facebook"></i></a>
-                    <a href="#" target="_blank" class="btn-social btn-github"><i class="fa fa-github-alt"></i></a>
+                    <a href="https://github.com/daesvi/Paises-Geek" target="_blank" class="btn-social btn-github"><i class="fa fa-github-alt"></i></a>
                     <a href="#" target="_blank" class="btn-social btn-instagram"><i class="fa fa-instagram"></i></a>
                     <a href="#" target="_blank" class="btn-social btn-linkedin"><i class="fa fa-linkedin"></i></a>
                     <a href="#" target="_blank" class="btn-social btn-twitter"><i class="fa fa-twitter"></i></a>
